Update branch for workflow

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,9 +3,9 @@ name: Python Titanic CI
 
 on:
   push:
-    branches: [hippo]
+    branches: [main]
   pull_request:
-    branches: [hippo]
+    branches: [main]
 
 jobs:
   test:
