--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,4 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project.urls]
-Homepage = "https://github.com/cmercier2/titanic"
+Homepage = "https://github.com/Rxdsilver/titanic-artefact"
